v0.0.11
  fix: LiteEvent once repeated calls not works
v0.0.16
  chore: package.json types
v0.0.17
  fix: fix relative imports
v0.0.18
  refactor(frequency): separate import
  refactor(frequency): added memoLastResult param and WithTeardown function
  refactor(frequency): renamed onceAtATime to nextWaitsPrev
  feat(frequency): added nextCancelsPrev function
v0.0.19
  feat(utility): added getterAndSetter
v0.0.20
  fix(frequency): fixed void fn param in nextCancelsPrev
v0.0.21
  feat(frequency): updated nextCancelsPrev
v0.0.22*
  feat(utility): created ignoreFirstArg function